<resources>
    <string name="app_name">VideoDownloaderApp</string>
    <string name="story_saver">Story Saver</string>
    <string name="next">Next</string>
    <string name="faster_download_speed">Faster Download Speed</string>
    <string name="description1">The faster download speed is a feature of video downloader apps that allows users to download videos quickly and efficiently.</string>
    <string name="social_downloader">Social Downloader</string>
    <string name="hashtag">Hashtag</string>
    <string name="caption">Caption</string>
    <string name="my_creation">My Creation</string>
    <string name="stories">Stories</string>
    <string name="dp_maker">Dp Maker</string>
    <string name="quotes">Quotes</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="twitter">Twitter</string>
    <string name="download">Download</string>
    <string name="story">Story</string>
    <string name="paste_or_enter_link_here">Paste or Enter link here...</string>
    <string name="paste">Paste</string>
    <string name="getting_stories">Getting Stories</string>
    <string name="your_downloads">Your Downloads</string>
    <string name="see_all">See All</string>
    <string name="visited_profile">Visited Profile</string>
    <string name="see_more">See more</string>
    <string name="private_account_alert">View stories from private account</string>
    <string name="login">Login</string>
    <string name="title_activity_hashtag">HashtagActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="enter_url">Enter Url</string>
    <string name="enter_instagram_url">Enter Instagram Url</string>
    <string name="toast_stroy_highligth_notsupported">story highlight not supported right now..coming soon</string>
    <string name="no_internet_message">Internet is not enabled. Do you want to go to settings menu?</string>
    <string name="alert">Alert</string>
    <string name="alert_exit_yes">Yes</string>
    <string name="alert_exit_no">No</string>
    <string name="open_story_highligth">open storysaver to download story or highlights</string>
    <string name="download_started">Download Started</string>
    <string name="downloaded_15mb">downloaded: 15mb</string>
    <string name="pending">pending</string>
    <string name="downloaded">"downloaded "</string>
    <string name="running">running</string>
    <string name="network_error">Network error</string>
    <string name="slow_internet_connection">Oops. Slow internet connection</string>
    <string name="recent_download">Recent downloads</string>
    <string name="copy_tag">Copy Tag</string>
    <string name="captions_massage">Captions are the brief text that describes or explains what is happening in a picture in a book, magazine, or newspaper</string>
    <string name="popular">Popular</string>
    <string name="_24_status">24 Status</string>
    <string name="toast_instagram_not_found">Sorry, Instagram Apps Not Found</string>
    <string name="toast_copied_to_clipboard">Copied to Clipboard!</string>
    <string name="facebook_already_installed">facebook app already installed</string>
    <string name="facebook_not_installing">facebook app not installing</string>
    <string name="toast_twitter_not_installing">twitter app not installing</string>
    <string name="toast_whatsapp_not_installed">Whatsapp have not been installed.</string>
    <string name="quotes_caption">Quotes that provide wisdom and inspire us to be our best selves are the best. You\'ll be motivated to keep going when you read these words.</string>
    <string name="text_copied_successfully">Text copied successfully</string>
    <string name="border">Border</string>
    <string name="flip">Flip</string>
    <string name="rotate">Rotate</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="degree">Degree</string>
    <string name="animal">Animal</string>
    <string name="how_to_download">How to Download</string>
    <string name="_1_open_tiktok">1. Open TikTok</string>
    <string name="fourth_how_too">2. Open Status Download</string>
    <string name="open_facebook">1. Open Facebook</string>
    <string name="open_instagram">1. Open Instagram</string>
    <string name="open_twitter">1.Open Twitter</string>
    <string name="facebook_copy_link">Click on share icon and select copy link</string>
    <string name="copy_link">2. Click on three dot and copy link</string>
    <string name="open_app">3. Open Video Download App</string>
    <string name="toast_facebook_not_found">facebook app not installing</string>
    <string name="facebook_login">Download stories login with facebook</string>
    <string name="toast_twitter_not_found">twitter app not installing</string>
    <string name="why_login">Why Login?</string>
    <string name="instagram_alert">The website you will login is the Instagram official website. We won\'t get your information in any way</string>
    <string name="instagram_private_story_alert">According to Instagram requirements, you will need to login to download private post or story</string>
    <string name="you_don_apos_t_need_to_loging_to_download_public_facebook_post">You don\'t need to loging to download public Facebook post.</string>
    <string name="login_amp_download">Login &amp; Download</string>
    <string name="toast_now_paste_link_again"><![CDATA[now paste link again &amp; download]]></string>
    <string name="MSG_ASK_PERMISSION">This app needs permissions to use this feature. You can grant them in app settings.</string>
    <string name="cannot_retrieve_cropped_image">cannot retrieve cropped image</string>
    <string name="please_selectphoto">Please Select Photo..</string>
    <string name="preview">preview</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <string name="give_stunning_look_to_your_profile_picture">Give stunning look to your profile picture</string>
    <string name="propic">ProPic</string>
    <string name="wapp_permission">Click on this button and Allow permission to access your status</string>
    <string name="allow_storage_access">Allow storage access</string>
    <string name="select_all">Select All</string>
    <string name="save">Save</string>
    <string name="status_not_available">Status not available.</string>
</resources>