<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:scrollbars="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="10sp"
                    app:srcCompat="@drawable/ic_profile_pic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_margin="10sp"
                    android:fontFamily="@font/dubai_bold"
                    android:gravity="center"
                    android:text="@string/login_amp_download"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10sp"
                    android:fontFamily="@font/dubai_regular"
                    android:text="@string/you_don_apos_t_need_to_loging_to_download_public_facebook_post"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_marginTop="10sp"
                    android:fontFamily="@font/dubai_bold"
                    android:gravity="center"
                    android:text="@string/instagram_private_story_alert"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_marginTop="10sp"
                    android:fontFamily="@font/dubai_regular"
                    android:text="@string/instagram_alert"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/TvWhyLogins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10sp"
                    android:background="@drawable/see_all_button_effect"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/dubai_bold"
                    android:text="@string/why_login"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/TvLogins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="10sp"
                    android:layout_marginTop="15sp"
                    android:background="@drawable/bg_login_button"
                    android:fontFamily="@font/dubai_bold"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    app:cornerRadius="3dp"
                    app:rippleColor="@color/downloadButtonRipple" />
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>
